# chess_ia

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-app.yml
data/: lichess.pgn  test.pgn
engine/: ai_player.py  board.py  memory.py  neural_net.py  q_learning.py  seed.py  train.py  train_openings.py
web/: app.py
web/templates/: index.html
